--- a/src/app/vertical-nav/vertical-nav.component.html
+++ b/src/app/vertical-nav/vertical-nav.component.html
@@ -42,81 +42,10 @@
             data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Challenger:</h6>
-                <a class="collapse-item" href="supperviseurs.html">Supperviseur</a>
-                <a class="collapse-item" href="concours.html">Concours</a>
+                <a class="collapse-item" [routerLink]="['/concours']">Supperviseur</a>
+                <a class="collapse-item" [routerLink]="['/concours']">Concours</a>
             </div>
         </div>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="thematique.html"
-            aria-expanded="true">
-            <i class="fas fa-tachometer-alt"></i>
-            <span>Thématiques</span>
-        </a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="coachs.html" aria-expanded="true">
-            <i class="fas fa-chalkboard-teacher"></i>
-            <span>Coachs</span>
-        </a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="partenaires.html"
-            aria-expanded="true">
-            <i class="fas fa-hands-helping"></i>
-            <span>Partenaires</span>
-        </a>
-    </li>
-
-    <!-- Nav Item - Utilities Collapse Menu -->
-
-
-    <!-- Divider -->
-    <hr class="sidebar-divider">
-
-    <!-- Heading -->
-    <div class="sidebar-heading">
-        Addons
-    </div>
-
-    <!-- Nav Item - Pages Collapse Menu -->
-    <li class="nav-item">
-        <a class="nav-link collapsed" href="#"
-            data-toggle="collapse" data-target="#collapsePages"
-            aria-expanded="true" aria-controls="collapsePages">
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Pages</span>
-        </a>
-        <div id="collapsePages" class="collapse"
-            aria-labelledby="headingPages"
-            data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Login Screens:</h6>
-                <a class="collapse-item" href="login.html">Login</a>
-                <a class="collapse-item" href="register.html">Register</a>
-                <a class="collapse-item"
-                    href="forgot-password.html">Forgot Password</a>
-                <div class="collapse-divider"></div>
-                <h6 class="collapse-header">Other Pages:</h6>
-                <a class="collapse-item" href="404.html">404 Page</a>
-                <a class="collapse-item" href="blank.html">Blank
-                    Page</a>
-            </div>
-        </div>
-    </li>
-
-    <!-- Nav Item - Charts -->
-    <li class="nav-item">
-        <a class="nav-link" href="charts.html">
-            <i class="fas fa-fw fa-chart-area"></i>
-            <span>Charts</span></a>
-    </li>
-
-    <!-- Nav Item - Tables -->
-    <li class="nav-item">
-        <a class="nav-link" href="tables.html">
-            <i class="fas fa-fw fa-table"></i>
-            <span>Tables</span></a>
     </li>
 
     <!-- Divider -->
