--- a/src/app/concours/concours.component.html
+++ b/src/app/concours/concours.component.html
@@ -46,7 +46,7 @@
                         <td>{{index+1}}</td>
                         <td>{{oneConcours.concours.nom_concours}}</td>
                         <td><a style="color: blue; cursor: pointer;"
-                                (click)="gotoEditionList(oneConcours.concours.alias_concours)">Éditions</a></td>
+                                (click)="gotoEditionList(oneConcours.concours)">Éditions</a></td>
                         <td>
                             <a href="#editEmployeeModal" class="edit mr-1"
                                 data-toggle="modal"><i class="fas fa-edit"
@@ -75,23 +75,25 @@
                         <div class="form-group">
                             <label>Nom</label>
                             <input type="text" class="form-control"
+                                placeholder="NIST"
+                                name="concoursObject.nom_concours"
+                                [(ngModel)]="concoursObject.nom_concours"
                                 required>
                         </div>
                         <div class="form-group">
-                            <label>Edition</label>
-                            <input type="date" class="form-control"
-                                required>
-                        </div>
-                        <div class="form-group">
-                            <label>Coach</label>
+                            <label>Alias</label>
                             <input type="text" class="form-control"
+                                placeholder="NIST"
+                                name="concoursObject.alias_concours"
+                                [(ngModel)]="concoursObject.alias_concours"
                                 required>
                         </div>
                     </div>
                     <div class="modal-footer">
                         <input type="button" class="btn btn-default"
                             data-dismiss="modal" value="Annuler">
-                        <input type="submit" class="btn btn-success"
+                        <input type="button" class="btn btn-success"
+                            (click)="saveConcours()"
                             value="Ajouter">
                     </div>
                 </form>
