Adding others feats

--- a/src/app/horizontal-nav/horizontal-nav.component.html
+++ b/src/app/horizontal-nav/horizontal-nav.component.html
@@ -238,9 +238,10 @@
                 data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">
                 <span class="mr-2 d-none d-lg-inline
-                    text-gray-600 small">Douglas McGee</span>
+                    text-gray-600 small">{{adminData.prenom + ' ' +
+                    adminData.nom}}</span>
                 <img class="img-profile rounded-circle"
-                    src="img/undraw_profile.svg">
+                    src="../../assets/images/userPIC.png">
             </a>
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right
