--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,6 +2,7 @@
 <div class="d-sm-flex align-items-center
     justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+    <p>{{adminData.prenom}}</p>
     <a href="#" class="d-none d-sm-inline-block btn
         btn-sm btn-primary shadow-sm"><i
             class="fas fa-download fa-sm text-white-50"></i>
