--- a/src/app/horizontal-nav/horizontal-nav.component.html
+++ b/src/app/horizontal-nav/horizontal-nav.component.html
@@ -156,7 +156,7 @@
                     align-items-center" href="#">
                     <div class="dropdown-list-image mr-3">
                         <img class="rounded-circle"
-                            src="img/undraw_profile_1.svg"
+                            src="./assets/img/undraw_profile_1.svg"
                             alt="...">
                         <div class="status-indicator
                             bg-success"></div>
@@ -174,7 +174,7 @@
                     align-items-center" href="#">
                     <div class="dropdown-list-image mr-3">
                         <img class="rounded-circle"
-                            src="img/undraw_profile_2.svg"
+                            src="./assets/img/undraw_profile_2.svg"
                             alt="...">
                         <div class="status-indicator"></div>
                     </div>
@@ -191,7 +191,7 @@
                     align-items-center" href="#">
                     <div class="dropdown-list-image mr-3">
                         <img class="rounded-circle"
-                            src="img/undraw_profile_3.svg"
+                            src="./assets/img/undraw_profile_3.svg"
                             alt="...">
                         <div class="status-indicator
                             bg-warning"></div>
