--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,30 @@
 <form>
-    <input type="text" name="login" [(ngModel)]="adminAccess.login">
-    <input type="password" name="password" [(ngModel)]="adminAccess.password">
-    <button class="btn btn-info" (click)="connection()">Connexion</button>
+  <input type="text" name="login" [(ngModel)]="adminAccess.login">
+  <input type="password" name="password" [(ngModel)]="adminAccess.password">
+  <button class="btn btn-info" (click)="connection()">Connexion</button>
 </form>
+
+<!-- <div>
+  <div class="container-first">
+    <h1><span> Le </span><span> jeu </span><span>concours </span><span> de
+        GAÏNDÉ 2000</span></h1>
+    <div class="container-btns">
+      <a href="register.html"><button class="btn-first b2">Se connecter</button></a>
+    </div>
+  </div>
+
+  <img src="../../assets/ressources/galsen.svg.png" class="logo">
+
+
+  <ul class="medias">
+    <li class="bulle"><img src="../../assets/ressources/fb.svg"
+        class="logo-medias"></li>
+    <li class="bulle"><img src="../../assets/ressources/insta.svg"
+        class="logo-medias"></li>
+    <li class="bulle"><img src="../../assets/ressources/yt.svg"
+        class="logo-medias"></li>
+    <li class="bulle"><img src="../../assets/ressources/fb.svg"
+        class="logo-medias"></li>
+  </ul>
+
+</div> -->
