--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
               font-weight-bold
               text-primary text-uppercase
               mb-1">
-              Inscript(s)</div>
+              Participants</div>
             <div class="h5 mb-0
               font-weight-bold
               text-gray-800">100</div>
@@ -49,7 +49,7 @@
               font-weight-bold
               text-success text-uppercase
               mb-1">
-              Projet(s)</div>
+              Projets</div>
             <div class="h5 mb-0
               font-weight-bold
               text-gray-800">30</div>
@@ -73,7 +73,7 @@
           <div class="col mr-2">
             <div class="text-xs
               font-weight-bold text-info
-              text-uppercase mb-1">Préselectionné(s)
+              text-uppercase mb-1">Préselectionnés
             </div>
             <div class="row no-gutters
               align-items-center">
