--- a/src/app/projets/projets.component.html
+++ b/src/app/projets/projets.component.html
@@ -1,167 +1,284 @@
 <!-- Content Row -->
 <div class="row">
-    <div class="container">
-        <div class="table-wrapper">
-            <div class="table-title">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h2><b>Projets</b></h2>
-                    </div>
-                    <div class="col-sm-6">
-                        <a [routerLink]="['/ajouterProjet']" class="btn
-                            btn-success
-                            mr-1"
-                            data-toggle="modal"><i class="material-icons">&#xE147;</i>
-                            <span>Ajouter</span></a>
-                        <a href="#deleteEmployeeModal" class="btn btn-danger"
-                            data-toggle="modal"><i class="material-icons">&#xE15C;</i>
-                            <span>Supprimer</span></a>
-                    </div>
-                </div>
-            </div>
-            <table class="table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th>
-                            <span class="custom-checkbox">
-                                <input type="checkbox" id="selectAll">
-                                <label for="selectAll"></label>
-                            </span>
-                        </th>
-                        <th>Nº</th>
-                        <th>Titre</th>
-                        <th>Équipe</th>
-                        <th>Thématique</th>
-                        <th>Présélection</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let oneProjet of projetList; index
-                        as index">
-                        <td>
-                            <span class="custom-checkbox">
-                                <input type="checkbox" id="checkbox1"
-                                    name="options[]" value="1">
-                                <label for="checkbox1"></label>
-                            </span>
-                        </td>
-                        <td>{{index+1}}</td>
-                        <td>{{oneProjet.titre}}</td>
-                        <td><a href="">{{oneProjet.equipe.nom_equipe}}</a></td>
-                        <td>{{oneProjet.nom_thematique}}</td>
-                        <td><button class="btn btn-warning"
-                                (click)="preselectionne(oneProjet)">Présélection</button></td>
-                        <td>
-                            <a href="#editEmployeeModal" class="edit mr-1"
-                                data-toggle="modal"><i class="fas fa-edit"
-                                    data-toggle="tooltip" title="Edit"></i></a>
-                            <a href="#deleteEmployeeModal" class="delete"
-                                data-toggle="modal"><i class="fas fa-trash-alt"
-                                    data-toggle="tooltip" title="Delete"></i></a>
-                        </td>
-                    </tr>
-
-                </tbody>
-            </table>
+  <div class="container">
+    <div class="table-wrapper">
+      <div class="table-title">
+        <div class="row">
+          <div class="col-sm-6">
+            <h2><b>Projets</b></h2>
+          </div>
+          <div class="col-sm-6">
+            <a [routerLink]="['/ajouterProjet']" class="btn
+              btn-success mr-1"
+              data-toggle="modal"><i class="material-icons">&#xE147;</i>
+              <span>Ajouter</span></a>
+            <a href="#deleteEmployeeModal" class="btn btn-danger"
+              data-toggle="modal"><i class="material-icons">&#xE15C;</i>
+              <span>Supprimer</span></a>
+          </div>
         </div>
-    </div>
+      </div>
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th>
+              <span class="custom-checkbox">
+                <input type="checkbox" id="selectAll">
+                <label for="selectAll"></label>
+              </span>
+            </th>
+            <th>Nº</th>
+            <th>Titre</th>
+            <th>Équipe</th>
+            <th>Thématique</th>
+            <th>Présélection</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let oneProjet of projetList; index
+            as index">
+            <td>
+              <span class="custom-checkbox">
+                <input type="checkbox" id="checkbox1"
+                  name="options[]" value="1">
+                <label for="checkbox1"></label>
+              </span>
+            </td>
+            <td>{{index+1}}</td>
+            <td>{{oneProjet.titre}}</td>
+            <td><a href="">{{oneProjet.equipe.nom_equipe}}</a></td>
+            <td>{{oneProjet.nom_thematique}}</td>
+            <td>
+              <button class="btn btn-sm btn-warning"
+                href="#addCoachModel" data-toggle="modal"
+                (click)="preselectionner(oneProjet)">
 
-    <!-- Edit Modal HTML -->
-    <div id="editEmployeeModal" class="modal fade">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <form>
-                    <div class="modal-header">
-                        <h4 class="modal-title">Modification de concours</h4>
-                        <button type="button" class="close"
-                            data-dismiss="modal" aria-hidden="true">&times;</button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label>Nom</label>
-                            <input type="text" class="form-control"
-                                required>
-                        </div>
-                        <div class="form-group">
-                            <label>Edition</label>
-                            <input type="date" class="form-control"
-                                required>
-                        </div>
-                        <div class="form-group">
-                            <label>Coach</label>
-                            <input type="email" class="form-control"
-                                required>
-                        </div>
+                <div *ngIf="oneProjet.status == true; then thenBlock else
+                  elseBlock"></div>
+                <ng-template #thenBlock>Préselectionné</ng-template>
+                <ng-template #elseBlock>Non présélectionné</ng-template>
+              </button>
+            </td>
+            <td>
+              <a href="#editEmployeeModal" class="edit mr-1"
+                data-toggle="modal"><i class="fas fa-edit"
+                  data-toggle="tooltip" title="Edit"></i></a>
+              <a href="#deleteEmployeeModal" class="delete"
+                data-toggle="modal"><i class="fas fa-trash-alt"
+                  data-toggle="tooltip" title="Delete"></i></a>
+            </td>
+          </tr>
 
-                    </div>
-                    <div class="modal-footer">
-                        <input type="button" class="btn btn-default"
-                            data-dismiss="modal" value="Annuler">
-                        <input type="submit" class="btn btn-info"
-                            value="Valider">
-                    </div>
-                </form>
-            </div>
-        </div>
+        </tbody>
+      </table>
     </div>
-    <!-- Delete Modal HTML -->
-    <div id="deleteEmployeeModal" class="modal fade">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <form>
-                    <div class="modal-header">
-                        <h4 class="modal-title">Suppresion de concours...</h4>
-                        <button type="button" class="close"
-                            data-dismiss="modal" aria-hidden="true">&times;</button>
-                    </div>
-                    <div class="modal-body">
-                        <p>Etes-vous sur de supprimer cette thématique ?</p>
-                        <p class="text-warning"><small>Cette action n'est
-                                pas reversible.</small></p>
-                    </div>
-                    <div class="modal-footer">
-                        <input type="button" class="btn btn-default"
-                            data-dismiss="modal" value="Annuler">
-                        <input type="submit" class="btn btn-danger"
-                            value="Supprimer">
-                    </div>
-                </form>
+  </div>
+
+  <!-- Edit Modal HTML -->
+  <div id="editEmployeeModal" class="modal fade">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form>
+          <div class="modal-header">
+            <h4 class="modal-title">Modification de concours</h4>
+            <button type="button" class="close"
+              data-dismiss="modal" aria-hidden="true">&times;</button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <label>Nom</label>
+              <input type="text" class="form-control"
+                required>
             </div>
-        </div>
+            <div class="form-group">
+              <label>Edition</label>
+              <input type="date" class="form-control"
+                required>
+            </div>
+            <div class="form-group">
+              <label>Coach</label>
+              <input type="email" class="form-control"
+                required>
+            </div>
+
+          </div>
+          <div class="modal-footer">
+            <input type="button" class="btn btn-default"
+              data-dismiss="modal" value="Annuler">
+            <input type="submit" class="btn btn-info"
+              value="Valider">
+          </div>
+        </form>
+      </div>
     </div>
+  </div>
+  <!-- Delete Modal HTML -->
+  <div id="deleteEmployeeModal" class="modal fade">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form>
+          <div class="modal-header">
+            <h4 class="modal-title">Suppresion de concours...</h4>
+            <button type="button" class="close"
+              data-dismiss="modal" aria-hidden="true">&times;</button>
+          </div>
+          <div class="modal-body">
+            <p>Etes-vous sur de supprimer cette thématique ?</p>
+            <p class="text-warning"><small>Cette action n'est
+                pas reversible.</small></p>
+          </div>
+          <div class="modal-footer">
+            <input type="button" class="btn btn-default"
+              data-dismiss="modal" value="Annuler">
+            <input type="submit" class="btn btn-danger"
+              value="Supprimer">
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 
 </div>
 <!-- /.container-fluid -->
 
 <!-- Ajouter Modal HTML -->
 <div id="addThematiqueModal" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <form>
-                <div class="modal-header">
-                    <h4 class="modal-title">Ajouter administrateur</h4>
-                    <button type="button" class="close"
-                        data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="form-group col-6">
-                            <label>Nom</label>
-                            <input type="text" class="form-control"
-                                name="object.nom_thematique"
-                                [(ngModel)]="object.nom_thematique"
-                                required>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <input type="button" class="btn btn-default"
-                        data-dismiss="modal" value="Annuler">
-                    <input type="submit" class="btn btn-success"
-                        value="Ajouter">
-                </div>
-            </form>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form>
+        <div class="modal-header">
+          <h4 class="modal-title">Ajouter administrateur</h4>
+          <button type="button" class="close"
+            data-dismiss="modal" aria-hidden="true">&times;</button>
         </div>
+        <div class="modal-body">
+          <div class="row">
+            <div class="form-group col-6">
+              <label>Nom</label>
+              <input type="text" class="form-control"
+                name="object.nom_thematique"
+                [(ngModel)]="object.nom_thematique"
+                required>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <input type="button" class="btn btn-default"
+            data-dismiss="modal" value="Annuler">
+          <input type="submit" class="btn btn-success"
+            value="Ajouter">
+        </div>
+      </form>
     </div>
+  </div>
+</div>
+
+<!-- Ajouter Coach -->
+<div id="addCoachModel" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form>
+        <div class="modal-header">
+          <h4 class="modal-title">Ajouter Coach</h4>
+          <button type="button" class="close"
+            data-dismiss="modal" aria-hidden="true">&times;</button>
+        </div>
+        <div class="modal-body">
+          <!-- Coash 1 -->
+          <div class="row">
+            <h3 class="align-center">Informations Coach 1</h3>
+            <div class="form-group col-6">
+              <label>Prénom</label>
+              <input type="text" class="form-control"
+                name="coash1.prenom"
+                [(ngModel)]="coash1.prenom"
+                required>
+            </div>
+            <div class="form-group col-6">
+              <label>Nom</label>
+              <input type="text" class="form-control"
+                name="coash1.nom"
+                [(ngModel)]="coash1.nom"
+                required>
+            </div>
+            <div class="form-group col-6">
+              <label>Genre</label>
+              <input type="text" class="form-control"
+                name="coash1.genre"
+                [(ngModel)]="coash1.genre"
+                required>
+            </div>
+            <div class="form-group col-6">
+              <label>Email</label>
+              <input type="text" class="form-control"
+                name="coash1.email"
+                [(ngModel)]="coash1.email"
+                required>
+            </div>
+            <div class="form-group col-6">
+              <label>Spécialité</label>
+              <input type="text" class="form-control"
+                name="coash1.specialite"
+                [(ngModel)]="coash1.specialite"
+                required>
+            </div>
+          </div>
+          <hr>
+          <br>
+          <!-- Coash 2 -->
+          <div class="row">
+            <h3 class="text-center">Informations Coach 2</h3>
+            <div class="form-group col-6">
+              <label>Prénom</label>
+              <input type="text" class="form-control"
+                name="coash2.prenom"
+                [(ngModel)]="coash2.prenom"
+                required>
+            </div>
+            <div class="form-group col-6">
+              <label>Nom</label>
+              <input type="text" class="form-control"
+                name="coash2.nom"
+                [(ngModel)]="coash2.nom"
+                required>
+            </div>
+            <div class="form-group col-6">
+              <label>Genre</label>
+              <input type="text" class="form-control"
+                name="coash2.genre"
+                [(ngModel)]="coash2.genre"
+                required>
+            </div>
+            <div class="form-group col-6">
+              <label>Email</label>
+              <input type="text" class="form-control"
+                name="coash2.email"
+                [(ngModel)]="coash2.email"
+                required>
+            </div>
+            <div class="form-group col-6">
+              <label>Spécialité</label>
+              <input type="text" class="form-control"
+                name="coash2.specialite"
+                [(ngModel)]="coash2.specialite"
+                required>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="modal-footer">
+          <input type="button" class="btn btn-default"
+            data-dismiss="modal" value="Annuler">
+
+          <input type="submit" class="btn btn-success"
+            data-dismiss="modal"
+            value="Ajouter"
+            (click)="savePreselection()">
+        </div>
+
+      </form>
+    </div>
+  </div>
 </div>
